tests/NormalTests/paczka1/fuzzy1/34031665.err
Error in line 8: xsYkOGtCNv A46 30,4
Error in line 9: xsYkOGtCNv S333 79,0
Error in line 18: S746 S746 59,8
Error in line 19: S746 S799 9,8
Error in line 22: S746 S746 48,7
